[package]
name = "l337-postgres"
version = "0.1.0"
authors = ["Jonathon Sheffield <samsmug@gmail.com>"]

[dependencies]
l3-37 = { path = ".." }
futures = "0.1.14"
tokio = "0.1.8"
tokio-postgres = { git = "https://github.com/coder543/rust-postgres.git", rev = "14bf371976abf8a44e01956a690f1ff21b6575f8"}
postgres-shared = { git = "https://github.com/coder543/rust-postgres.git", rev = "14bf371976abf8a44e01956a690f1ff21b6575f8" }
